--- a/client/build.gradle
+++ b/client/build.gradle
@@ -4,39 +4,15 @@ plugins {
 
 description = 'WST client'
 
-configurations {
-    jaxws
-}
 
 dependencies {
-    jaxws "com.sun.xml.ws:jaxws-tools:2.3.2"
+    implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.0.4'
+    implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.4'
+    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-moxy', version: '3.0.4'
 
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
-    implementation group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
-    implementation group: 'javax.jws', name: 'javax.jws-api', version: '1.1'
-    implementation group: 'com.sun.xml.ws', name:'rt', version: '2.3.5'
-}
-
-task wsimport {
-    ext.destDir = file("${projectDir}/src/main/java/bgs/client/generated")
-    doLast {
-        ant {
-            sourceSets.main.output.classesDirs.inits()
-            destDir.mkdirs()
-            taskdef(name: 'wsimport',
-                    classname: 'com.sun.tools.ws.ant.WsImport',
-                    classpath: configurations.jaxws.asPath
-            )
-            wsimport(keep: true,
-                    sourcedestdir: 'src/main/java',
-                    package: "bgs.client.generated",
-                    wsdl: "http://bgs99claptop:8080/wst/SubscriptionService?wsdl") {
-                xjcarg(value: "-XautoNameResolution")
-            }
-        }
-    }
+    implementation project(':shared')
 }
 
 application {
-    mainClass = "bgs.client.Client"
+    mainClass = "bgs.client.Main"
 }
