--- a/service/src/main/webapp/WEB-INF/web.xml
+++ b/service/src/main/webapp/WEB-INF/web.xml
@@ -3,21 +3,20 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <listener>
-        <listener-class>
-            com.sun.xml.ws.transport.http.servlet.WSServletContextListener
-        </listener-class>
-    </listener>
 
     <servlet>
-        <servlet-name>JAXWSServlet</servlet-name>
+        <servlet-name>bgs-servlet</servlet-name>
         <servlet-class>
-            com.sun.xml.ws.transport.http.servlet.WSServlet
+            org.glassfish.jersey.servlet.ServletContainer
         </servlet-class>
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>bgs.service</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>JAXWSServlet</servlet-name>
+        <servlet-name>bgs-servlet</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
 </web-app>
