--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,6 +1,9 @@
-apply plugin: 'java'
-apply plugin: 'jacoco'
-apply plugin: 'war'
+plugins {
+    id 'java'
+    id 'jacoco'
+    id 'war'
+    id "io.freefair.lombok" version "6.4.3"
+}
 
 description = 'WST service'
 
