--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -1,4 +1,6 @@
-apply plugin: 'java-library'
+plugins {
+    id 'java-library'
+    id "io.freefair.lombok" version "6.4.3"
+}
 
 description = 'WST shared'
-
