--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,42 +1,16 @@
-plugins {
-    id 'application'
-}
+apply plugin: 'application'
 
-description = 'WST client'
-
-configurations {
-    jaxws
-}
+description = 'jUDDI client'
 
 dependencies {
-    jaxws "com.sun.xml.ws:jaxws-tools:2.3.2"
+    implementation group: 'org.apache.juddi', name: 'uddi-ws', version: '3.3.10'
+    implementation group: 'org.apache.juddi', name: 'juddi-client', version: '3.3.10'
 
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
     implementation group: 'javax.xml.ws', name: 'jaxws-api', version: '2.3.1'
     implementation group: 'javax.jws', name: 'javax.jws-api', version: '1.1'
     implementation group: 'com.sun.xml.ws', name:'rt', version: '2.3.5'
 }
 
-task wsimport {
-    ext.destDir = file("${projectDir}/src/main/java/bgs/client/generated")
-    doLast {
-        ant {
-            sourceSets.main.output.classesDirs.inits()
-            destDir.mkdirs()
-            taskdef(name: 'wsimport',
-                    classname: 'com.sun.tools.ws.ant.WsImport',
-                    classpath: configurations.jaxws.asPath
-            )
-            wsimport(keep: true,
-                    sourcedestdir: 'src/main/java',
-                    package: "bgs.client.generated",
-                    wsdl: "http://bgs99claptop:8080/wst/SubscriptionService?wsdl") {
-                xjcarg(value: "-XautoNameResolution")
-            }
-        }
-    }
-}
-
 application {
-    mainClass = "bgs.client.Client"
+    mainClass = "bgs.Main"
 }
